# moneypenny

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  PLAN.md  README.md  SPEC.md  TASKS.md  moneypenny.example.toml  moneypenny.toml  package-lock.json  package.json  pnpm-lock.yaml  roadmap.md  temp.md  tsconfig.json  vercel.json  webpack.config.js
.cursor/: hooks.json  mcp.json
.cursor/rules/: moneypenny.mdc
.cursorrules/: tasks.md
.github/workflows/: ci.yml
app/controllers/: application_controller.rb  sessions_controller.rb  users_controller.rb
app/models/: account.rb  bill.rb  budget_generator.rb  goal.rb  transaction.rb  user.rb
apps/cli/: package.json
apps/ui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  master.key  routes.rb
config/environments/: production.rb
crates/mp/: Cargo.toml  README.md
crates/mp-core/: Cargo.toml  README.md
crates/mp-core/src/: agent.rs  channel.rs  config.rs  context.rs  db.rs  encryption.rs  error.rs  extraction.rs  fleet.rs  gateway.rs  ingest.rs  lib.rs  mcp.rs  observability.rs  operations.rs  policy.rs  scheduler.rs  schema.rs  search.rs  sync.rs
crates/mp-core/src/dsl/: ast.rs  execute.rs  lexer.rs  mod.rs  parser.rs  validate.rs
crates/mp-core/src/operations/: activity.rs  agent_ops.rs  brain_ops.rs  events_ops.rs  experience_ops.rs  focus_ops.rs  ingest.rs  job.rs  knowledge.rs  memory.rs  mod.rs  policy.rs  session.rs  system.rs
crates/mp-core/src/store/: brain.rs  embedding.rs  events.rs  experience.rs  facts.rs  knowledge.rs  log.rs  mod.rs  redact.rs  scratch.rs
crates/mp-core/src/store/log/: messages.rs  policy_audit.rs  tool_calls.rs
crates/mp-core/src/tools/: builtins.rs  hooks.rs  mod.rs  registry.rs  runtime.rs
crates/mp-ext/: Cargo.toml  README.md  build.rs
crates/mp-ext/src/: lib.rs
crates/mp-ext/tests/: integration.rs
crates/mp-llm/: Cargo.toml  README.md
crates/mp-llm/src/: anthropic.rs  http.rs  lib.rs  local_embed.rs  noop.rs  provider.rs  sqlite_ai.rs  test_provider.rs  types.rs
crates/mp/src/: adapters.rs  agent.rs  cli.rs  domain_tools.rs  helpers.rs  intent.rs  lib.rs  main.rs  sidecar.rs  ui.rs  worker.rs
crates/mp/src/adapters/: dashboard.rs  discord.rs  http.rs  mod.rs  slack.rs  telegram.rs
crates/mp/src/commands/: agent.rs  audit.rs  brain.rs  briefing.rs  chat.rs  db.rs  doctor.rs  embeddings.rs  experience.rs  facts.rs  fleet.rs  focus.rs  health.rs  hook.rs  ingest.rs  init.rs  job.rs  knowledge.rs  mod.rs  mpq.rs  policy.rs  send.rs  serve.rs  session.rs  setup.rs  skill.rs  spend.rs  start.rs  stop.rs  sync.rs
crates/mp/src/context/: mod.rs  request.rs
crates/mp/src/docs/: content.rs  generators.rs  mod.rs
crates/mp/src/helpers/: bootstrap.rs  db.rs  embedding.rs  extraction.rs  formatting.rs  mod.rs  models.rs  providers.rs  session.rs  sidecar.rs
crates/mp/src/tools/: mod.rs  registry.rs
crates/mp/tests/: README.md  e2e_agent.rs  e2e_http.rs  e2e_send.rs  integration_commands.rs  integration_init.rs  integration_sync.rs
crates/mp/tests/common/: mod.rs
db/: schema.rb  seeds.rb
db/migrate/: 20200730185635_create_users.rb  20200730192016_create_transactions.rb  20200730192507_create_accounts.rb  20200731024737_remove_from_user.rb  20200731024859_remove_user_col.rb  20200731025200_remove_user_cols.rb  20200731025519_editaccounts.rb  20200731025923_change_unique_email.rb  20200731030037_create_bills.rb  20200731030356_add_paid_bill.rb  20200731030432_create_goals.rb  20200731194855_add_instit.rb  20200731195529_add_index_to_goalsand_bills.rb  20200801170702_add_not_null_to_users.rb  20200801175518_add_default_value_bills.rb  20200801180024_add_default_value_bills_again.rb  20200801181201_add_a_lto_accounts.rb  20200801181824_change_type_name_accounts.rb  20200803225238_create_budget_generators.rb  20200803230916_dropdb.rb  20200811023037_update_database.rb  20200815175925_add_index_to_session.rb  20200815180640_create_accounts.rb  20200818212014_remove_debit.rb  20200818212334_add_back_debit.rb  20200820172317_create_transactions.rb  20200820210817_change_date_to_date_time.rb  20200824222700_create_goals.rb  20200824223215_add_index_goals.rb  20200825195029_create_bills.rb
docs/: DEPLOYMENT.md  MANUAL_QA.md  OPENCLAW_INTEGRATION.md  PLAN.md  SPEC.md  SPEC_CURRENT.md  STRATEGY_DECISIONS.md  TASKS.md  WORKBOARD.md  astro.config.mjs  introduction.mdx  mint.json  package-lock.json  package.json  quickstart.mdx
docs/concepts/: agents.mdx  knowledge.mdx  memory-and-facts.mdx  policy-engine.mdx  scheduled-jobs.mdx  search.mdx  skills-and-tools.mdx  sync.mdx
docs/internal/: DEMO_GUIDE.md  SPEC_CURRENT.md  STRATEGY_DECISIONS.md  WORKBOARD.md
docs/v2/: 00-vision.md  01-sessions.md  02-blueprints.md  03-ui.md  04-api.md  05-data.md  06-events.md  07-tools.md  08-runtime.md  09-ideas.md  10-design-language.md
frontend/actions/: account_actions.js  bill_actions.js  goal_actions.js  modal_actions.js  news_actions.js  session_actions.js  transaction_actions.js
frontend/components/: app.jsx  modal.jsx  root.jsx
frontend/reducers/: account_errors_reducer.js  account_modal_reducer.js  accounts_reducer.js  bills_errors_reducer.js  bills_reducer.js  entities_reducer.js  errors_reducer.js  goal_errors_reducer.js  goals_reducer.js  modal_reducer.js  news_reducer.js  root_reducer.js  selector.js  session_errors_reducer.js  session_reducer.js  transaction_errors_reducer.js  transaction_modal_reducer.js  transactions_reducer.js  (+2 more)
moneypenny/: Gemfile  package-lock.json  package.json
plans/: wire_sqlite_extensions.plan.md
scripts/: demo-walkthrough.sh  demo.sh  fresh.sh  reinit.sh  setup.sh
specs/: 2026-03-09-fleet-management.md  DEMO_GUIDE.md  PROJECT_SPEC.md  mp-binary.md  mp-core.md  mp-dsl.md  mp-ext.md  mp-llm.md
tmp/: development_secret.txt
web/: .env.example  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web-ui/: README.md  index.html  package-lock.json  package.json
(+12297 files in other folders)
