[workspace]
members = ["crates/mp", "crates/mp-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nicholasgasior/moneypenny"

[workspace.dependencies]
mp-core = { path = "crates/mp-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.35", features = ["bundled", "load_extension"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
