[workspace]
members = ["crates/mp", "crates/mp-core", "crates/mp-llm", "crates/mp-ext"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nicholasgasior/moneypenny"

[workspace.dependencies]
mp-core = { path = "crates/mp-core" }
mp-llm = { path = "crates/mp-llm" }
mp-ext = { path = "crates/mp-ext" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.35", features = ["bundled", "load_extension"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
