[package]
name = "mp-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
regex = "1"
reqwest.workspace = true
