[package]
name = "mp-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
cron = "0.12"
mp-ext = { path = "../mp-ext" }
regex = "1"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
ureq = "3"
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
