[package]
name = "mp-llm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
