[package]
name = "mp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mp"
path = "src/main.rs"

[dependencies]
mp-core.workspace = true
mp-ext.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
