[package]
name = "mp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mp"
path = "src/main.rs"

[dependencies]
mp-core.workspace = true
mp-llm.workspace = true
mp-ext.workspace = true
anyhow.workspace = true
axum.workspace = true
reqwest.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
toml.workspace = true
libc = "0.2"
dotenvy = "0.15.7"
owo-colors = "4"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
toml = "0.8"
